# ds-darc-manual-registration

./: AppManualRegistration.py  PyAppSelectPoints_pyside.py  PyAppTest.py  README.md  RunAppManualRegistration.py  generate_points_file.py  pyproject.toml  register_from_points_listing.py  requirements.txt  sitk_transforms_note.txt  template_manual_registration_files.csv  transform_points.py
manual_registration_tool/app/: RunAppManualRegistration.py
manual_registration_tool/utils/: affine_matrix_to_sitk.py  register_from_points_listing.py
src/manual_registration_app/: AppManualRegistration.py
src/utils/: generate_points_file.py
